<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:padding="16dp"
    tools:context=".Fragment4">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/title4"
        android:textColor="@android:color/holo_purple"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"

        android:src="@drawable/phone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/description4"
        android:textSize="25sp"
        android:textColor="@android:color/holo_green_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/back4next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="bottom|start"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="true"></TextView>

        <TextView
            android:id="@+id/slide4next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="bottom|end"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="true"></TextView>
    </LinearLayout>


</LinearLayout>